--- a/notebook/Gemfile
+++ b/notebook/Gemfile
@@ -3,6 +3,8 @@ source 'https://rubygems.org'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.5'
+# Repository for collecting Locale data for Ruby on Rails I18n as well as other interesting, Rails related I18n stuff http://rails-i18n.org
+gem 'rails-i18n', '~> 4.0.0'
 # Biblioteca para gerar dados ficticios, como nomes, enderecos e numeros de telefone
 gem 'faker'
 # Use sqlite3 as the database for Active Record
